--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-card-flip": "^1.1.0",
     "react-dom": "^17.0.1",
+    "react-material-ui-form-validator": "^2.1.4",
+    "react-moment": "^1.1.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
+    "save": "^2.4.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
