--- a/package.json
+++ b/package.json
@@ -6,20 +6,26 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.1",
+    "@reactchartjs/react-chart.js": "^1.0.0-rc.3",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
     "moment": "^2.29.1",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-card-flip": "^1.1.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
+    "react-flashcard": "^1.0.2",
     "react-material-ui-form-validator": "^2.1.4",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.1.1",
     "reactstrap": "^8.9.0",
     "save": "^2.4.0",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
